--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "luxon": "^3.5.0",
     "motion": "^12.9.2",
     "nanoid": "^5.0.9",
-    "next": "latest",
+    "next": "^16.0.7",
     "next-intl": "^4.3.5",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
